--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,7 @@ constantly==15.1.0
 cryptography==3.4.6
 daphne==3.0.1
 dj-database-url==0.5.0
-Django==3.0.5
-django-heroku==0.3.1
+Django>=3.1.6
 django-location-field==2.1.0
 django-next-prev==1.1.0
 djangorestframework==3.12.2
@@ -19,7 +18,7 @@ idna==3.1
 incremental==17.5.0
 numpy==1.19.5
 pandas==1.1.5
-Pillow==8.1.0
+Pillow>=8.1.1
 plotly==4.14.3
 psycopg2==2.8.6
 pyasn1==0.4.8
