--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ pytz==2021.1
 retrying==1.3.3
 service-identity==18.1.0
 six==1.15.0
-sqlparse==0.4.1
+sqlparse>=0.4.2
 Twisted==20.3.0
 txaio==20.12.1
 whitenoise==5.2.0
